2007-06-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el:
	* tramp-fish.el:
	* tramp-smb.el: Unify "Tramp" in strings.

	* tramp.el (tramp-handle-substitute-in-file-name): "//" and "/~"
	substitute only in the local filename part.  Suggested by Peter
	Gordon <peter@pg-consultants.com>.
	(tramp-advice-minibuffer-electric-separator)
	(tramp-advice-minibuffer-electric-tilde): New defadvices.
	(tramp-append-tramp-buffers): Replace "sensible" by "sensitive" in
	the hint.

2007-06-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): VISIT must be
	handled after insertion of the local copy.  Reported by Peter
	Gordon <peter@pg-consultants.com>.

2007-05-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-persistency-file-name): Check also for
	`user-emacs-directory' and `user-init-directory'.

	* tramp-gw.el (tramp-gw-open-connection): Apply `vector' instead
	of `make-tramp-file-name'.

	* tramp-util.el (all): Quote the function names in
	`tramp-util-unload-hook' if they aren't symbols yet.
	(tramp-advice-before-ediff-exec-process): New defadvice.

2007-05-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el:
	* tramp-ftp.el:
	* tramp-smb.el:
	* tramp-util.el:
	* tramp-vc.el:
	Don't load cl.el, because that pollutes the namespace.  Replace cl
	macros by their implementations where necessary.  Requested by
	Richard Stallman <rms@gnu.org>.

	* tramp.el (tramp-file-name-p, tramp-file-name-method,
	(tramp-file-name-user, tramp-file-name-host)
	(tramp-file-name-localname): New defuns, replacing defstruct
	`tramp-file-name'.
	(tramp-completion-dissect-file-name1, tramp-compute-multi-hops)
	(tramp-dissect-file-name): Apply `vector' instead of
	`make-tramp-file-name'.
	(tramp-do-copy-or-rename-file-out-of-band): Aset 3rd index instead
	of 4th, when setting localname.
	(tramp-compute-multi-hops): Aset 2nd index instead of 3rd, when
	setting host.
