@@ -1,3 +1,15 @@
+2007-06-20  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el:
+	* tramp-cache.el:
+	* tramp-fish.el:
+	* tramp-smb.el:
+	* tramp-util.el: Use `expand-file-name' instead of `concat' where
+	appropriate.
+
+	* tramp.el (tramp-action-yesno, tramp-action-yn): Protect
+	`pop-to-buffer' by `save-match-data'.
+
 2007-06-17  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el:
